<resources>
    <string name="app_name">Response_Time_Assesment</string>
    <string name="bad">Bad</string>
    <string name="mediocre">Mediocre</string>
    <string name="good">Good</string>
    <string name="confirm">CONFIRM</string>
    <string name="showtext">Show Text</string>
    <string name="oath">Night gathers, and now my watch begins. It shall not end until my death. I shall take no wife, hold no lands, father no children. I shall wear no crowns and win no glory. I shall live and die at my post. I am the sword in the darkness. I am the watcher on the walls. I am the shield that guards the realms of men. I pledge my life and honor to the Night\'s Watch, for this night and all the nights to come.</string>
</resources>
