<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/radioEvaluate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad"
            android:layout_marginBottom="15dp"/>

        <RadioButton
            android:id="@+id/radioMediocre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediocre"
            android:layout_marginBottom="15dp" />

        <RadioButton
            android:id="@+id/radioGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:layout_marginBottom="15dp"/>
    </RadioGroup>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/Okbutton"
        android:layout_below="@+id/radioEvaluate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />


</RelativeLayout>