<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#060606">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showtext"
        android:id="@+id/show_button"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/middlerelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/show_button"
        android:background="#060606">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=" "
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:id="@+id/mytextView"
            android:background="#fffdfd"/>

        <RadioGroup
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentBottom="true"
            android:paddingLeft="60dp"
            android:orientation="horizontal"
            android:id="@+id/radioEvaluate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dedddc">

            <RadioButton
                android:id="@+id/radioBad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"/>

            <RadioButton
                android:id="@+id/radioMediocre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mediocre"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"/>

            <RadioButton
                android:id="@+id/radioGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good"
                android:layout_marginBottom="10dp"/>
        </RadioGroup>

    </RelativeLayout>


</RelativeLayout>